[gd_scene load_steps=28 format=2]

[ext_resource path="res://42/agente_42_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://42/42.gd" type="Script" id=2]
[ext_resource path="res://42/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://42/pistol.wav" type="AudioStream" id=4]
[ext_resource path="res://42/light.png" type="Texture" id=5]
[ext_resource path="res://42/die2.wav" type="AudioStream" id=6]
[ext_resource path="res://42/pain1.wav" type="AudioStream" id=7]
[ext_resource path="res://42/stepdirt_7.wav" type="AudioStream" id=8]
[ext_resource path="res://42/stepstone_1.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_name = "idle_back_left"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 12 ), Vector2( 1, 12 ), Vector2( 2, 12 ), Vector2( 3, 12 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_back_right"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_front_left"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 8 ), Vector2( 1, 8 ), Vector2( 2, 8 ), Vector2( 3, 8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_front_right"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run_back_left"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 13 ), Vector2( 1, 13 ), Vector2( 2, 13 ), Vector2( 3, 13 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "run_back_right"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 9 ), Vector2( 1, 9 ), Vector2( 2, 9 ), Vector2( 3, 9 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 14 ), Vector2( 1, 14 ), Vector2( 2, 14 ), Vector2( 3, 14 ), Vector2( 4, 14 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( -1, 0 ) ],
"method": "shoot_bullet"
}, {
"args": [ Vector2( -1, 0 ) ],
"method": "shoot_bullet"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../GunShot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ), Vector2( 1, 6 ), Vector2( 2, 6 ), Vector2( 3, 6 ), Vector2( 4, 6 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 1, 0 ) ],
"method": "shoot_bullet"
}, {
"args": [ Vector2( 1, 0 ) ],
"method": "shoot_bullet"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../GunShot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=11]
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 11 ), Vector2( 1, 11 ), Vector2( 2, 11 ), Vector2( 3, 11 ), Vector2( 4, 11 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, 1 ) ],
"method": "shoot_bullet"
}, {
"args": [ Vector2( 0, 1 ) ],
"method": "shoot_bullet"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../GunShot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ), Vector2( 3, 3 ), Vector2( 4, 3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, 1 ) ],
"method": "shoot_bullet"
}, {
"args": [ Vector2( 0, 1 ) ],
"method": "shoot_bullet"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../GunShot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=13]
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 10 ), Vector2( 1, 10 ), Vector2( 2, 10 ), Vector2( 3, 10 ), Vector2( 4, 10 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( -1, 0 ) ],
"method": "shoot_bullet"
}, {
"args": [ Vector2( -1, 0 ) ],
"method": "shoot_bullet"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../GunShot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=14]
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 3, 2 ), Vector2( 4, 2 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 1, 0 ) ],
"method": "shoot_bullet"
}, {
"args": [ Vector2( 1, 0 ) ],
"method": "shoot_bullet"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../GunShot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=15]
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 15 ), Vector2( 1, 15 ), Vector2( 2, 15 ), Vector2( 3, 15 ), Vector2( 4, 15 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, -1 ) ],
"method": "shoot_bullet"
}, {
"args": [ Vector2( 0, -1 ) ],
"method": "shoot_bullet"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../GunShot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=16]
length = 0.5
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 7 ), Vector2( 1, 7 ), Vector2( 2, 7 ), Vector2( 3, 7 ), Vector2( 4, 7 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0, -1 ) ],
"method": "shoot_bullet"
}, {
"args": [ Vector2( 0, -1 ) ],
"method": "shoot_bullet"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../GunShot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 16.8986, 16 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 7.73706, 27.5221 )

[node name="42" type="KinematicBody2D" groups=[
"player",
]]
light_mask = 3
collision_layer = 37
collision_mask = 12
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 16
hframes = 5
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/idle_back_left = SubResource( 1 )
anims/idle_back_right = SubResource( 2 )
anims/idle_front_left = SubResource( 3 )
anims/idle_front_right = SubResource( 4 )
anims/run_back_left = SubResource( 5 )
anims/run_back_right = SubResource( 6 )
anims/run_front_left = SubResource( 7 )
anims/run_front_right = SubResource( 8 )
anims/shoot_back_left = SubResource( 9 )
anims/shoot_back_right = SubResource( 10 )
anims/shoot_down_left = SubResource( 11 )
anims/shoot_down_right = SubResource( 12 )
anims/shoot_front_left = SubResource( 13 )
anims/shoot_front_right = SubResource( 14 )
anims/shoot_up_left = SubResource( 15 )
anims/shoot_up_right = SubResource( 16 )

[node name="WallCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 17 )

[node name="ShootPositionEast" type="Position2D" parent="."]
position = Vector2( 38.832, -16.3518 )

[node name="ShootPositionSouth" type="Position2D" parent="."]
position = Vector2( 0, 40 )

[node name="ShootPositionWest" type="Position2D" parent="."]
position = Vector2( -37.9977, -16.5186 )

[node name="ShootPositionNorth" type="Position2D" parent="."]
position = Vector2( 0, -40 )

[node name="HitBox" type="Area2D" parent="." groups=[
"hitbox",
"player",
]]
priority = 1.0
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.471939, -4.24744 )
shape = SubResource( 18 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )

[node name="HitTimeout" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GunShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 3
position = Vector2( 0.353546, 0 )
texture = ExtResource( 5 )
texture_scale = 0.8
range_item_cull_mask = -2147483645
shadow_enabled = true
shadow_item_cull_mask = 2

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="StepDirt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="StepFloor" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="OneLiner" type="Label" parent="."]
margin_left = 41.0
margin_top = -68.0
margin_right = 136.0
margin_bottom = -15.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="OneLiner"]
wait_time = 3.0

[node name="DrunkTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StompTimeout" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DeadTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="HitTimeout" to="." method="_on_HitTimeout_timeout"]
[connection signal="timeout" from="OneLiner/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DrunkTimer" to="." method="_on_DrunkTimer_timeout"]
[connection signal="timeout" from="StompTimeout" to="." method="_on_StompTimeout_timeout"]
[connection signal="timeout" from="DeadTimer" to="." method="_on_DeadTimer_timeout"]
